--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,11 @@
 
 body {
   background-color: #708090;
-  margin: 0;
+  padding: 2rem;
+  margin: auto;
   display: flex;
-  height: 100vh;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .bar {
@@ -22,24 +24,26 @@ body {
   position: relative;
 }
 
-#container {
+.container {
   width: 900px;
   height: 560px;
-  margin: auto;
   padding: 20px;
   background-color: white;
-  box-shadow: 2px 2px 20px;
 }
 
-#title {
+.title,
+.subtitle {
   text-align: center;
-  font-size: 2.5em;
   padding: 0;
   margin: 0;
   font-weight: 200;
 }
 
-.tooltip {
+.title {
+  font-size: 2em;
+}
+
+.barChartTooltip {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,4 +60,41 @@ body {
   box-shadow: 1px 1px 10px;
   border-radius: 2px;
   pointer-events: none;
+}
+
+.heatMapTooltip {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  text-align: center;
+  top: 350px;
+  transform: translate(-50px, -90px);
+  width: 110px;
+  height: 70px;
+  padding: 2px;
+  font: 14px sans-serif;
+  color: white;
+  background: black;
+  border: 0px;
+  box-shadow: 1px 1px 10px;
+  border-radius: 5px;
+  pointer-events: none;
+}
+
+.scatterplotTooltip {
+  display: flex;
+  position: absolute;
+  text-align: left;
+  transform: translate(0px, -35px);
+  padding: 10px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
+#heat-map {
+  position: relative;
 }
