--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ body {
   font-size: 2em;
 }
 
+#bar-chart {
+  position: relative;
+}
+
 .barChartTooltip {
   display: flex;
   justify-content: center;
@@ -63,13 +67,16 @@ body {
   pointer-events: none;
 }
 
+#heat-map {
+  position: relative;
+}
+
 .heatMapTooltip {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   text-align: center;
-  top: 350px;
   transform: translate(-50px, -90px);
   width: 110px;
   height: 70px;
