--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -54,7 +55,7 @@ body {
   width: 150px;
   height: 50px;
   padding: 2px;
-  font: 14px serif;
+  font-size: 14px;
   background: lightsteelblue;
   border: 0px;
   box-shadow: 1px 1px 10px;
@@ -72,7 +73,7 @@ body {
   width: 110px;
   height: 70px;
   padding: 2px;
-  font: 14px sans-serif;
+  font-size: 14px;
   color: white;
   background: black;
   border: 0px;
@@ -93,7 +94,7 @@ body {
   text-align: left;
   transform: translate(0px, -35px);
   padding: 10px;
-  font: 12px sans-serif;
+  font-size: 12px;
   background: lightsteelblue;
   border: 0px;
   border-radius: 8px;
